Making changes to simple.html

--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,7 @@
 -->
 
 <head>
-	<title>An example website</title>
+	<title>A Great website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -19,7 +19,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Git Training 2021
 		</p>
 	</main>
 	<footer class="container">
